fix: change grid size so that product don't get too big

--- a/styles/main.css
+++ b/styles/main.css
@@ -69,9 +69,9 @@ main {
     flex: 1;
     padding: var(--padding-md);
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(14rem, 18rem));
     gap: var(--padding-md);
-    justify-content: center;
+    justify-content: start;
 }
 
 .product {
